# itm

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  report.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/about/: motivation.md  problem.md  roadmap.md
docs/design/: architecture.md  data-strategy.md  label-generation.md  multi-event-hazard.md  novelty.md
docs/implementation/: ami-corpus.md  environment.md  maai-baseline.md  pipeline.md
docs/meta/: changelog.md  documentation-policy.md
docs/reference/: glossary.md  papers.md  resources.md
docs/research/: datasets.md  existing-models.md  overview.md  related-work.md  turn-taking-101.md  visual-cues.md
scripts/: build_visual_dataset.py  diagnose_itm_hazard.py  download_ami_subset.py  eval_itm_on_ami.py  eval_maai_on_ami.py  extract_visual_features.py  inspect_ami_meeting.py  inspect_dataset.py  inspect_smart_turn_data.py  probe_vap_shapes.py  probe_visual_only.py  test_maai_inference.py  train_itm.py
src/itm/: __init__.py  training.py
src/itm/data/: __init__.py  ami.py  audio.py  dataset.py  labels.py  targets.py
src/itm/models/: __init__.py  itm_model.py
tests/: test_ami.py  test_audio.py  test_dataset.py  test_itm_model.py  test_labels.py  test_targets.py  test_training.py
