[project]
name = "itm"
version = "0.1.0"
description = "It's My Turn — multimodal proactive turn-taking prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "BSD-2-Clause" }
authors = [{ name = "ksterx" }]
dependencies = [
    "maai>=0.1.16",
    "numpy>=1.23",
    "soundfile>=0.13",
    "torch>=2.6",
    "torchaudio>=2.6",
    "huggingface-hub>=0.20",
    "datasets>=2.18",
    "pydantic>=2.6",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "ipython>=8.0",
]
video = [
    "mediapipe>=0.10",
    "opencv-python>=4.10",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "pymdown-extensions>=10.0",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
